[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/prefabs/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/models/characters/ray.glb" type="PackedScene" id=2]
[ext_resource path="res://gfx/models/characters/vertex_color_outlined.material" type="Material" id=3]
[ext_resource path="res://gfx/ui/sentry_butt.png" type="Texture" id=4]
[ext_resource path="res://gfx/ui/sentry_butt_press.png" type="Texture" id=5]
[ext_resource path="res://scripts/ai/ray_attacks.gd" type="Script" id=6]
[ext_resource path="res://gfx/models/sentry.glb" type="PackedScene" id=7]
[ext_resource path="res://gfx/materials/blueprint.tres" type="Material" id=8]
[ext_resource path="res://scripts/blueprint.gd" type="Script" id=9]
[ext_resource path="res://gfx/ui/build_butt_press.png" type="Texture" id=10]
[ext_resource path="res://gfx/ui/build_butt.png" type="Texture" id=11]
[ext_resource path="res://gfx/ui/cancel_butt.png" type="Texture" id=12]
[ext_resource path="res://gfx/ui/cancel_butt_press.png" type="Texture" id=13]
[ext_resource path="res://gfx/ui/build_butt_disable.png" type="Texture" id=14]
[ext_resource path="res://gfx/ui/sentry_butt_disable.png" type="Texture" id=15]
[ext_resource path="res://sound/place.wav" type="AudioStream" id=16]

[sub_resource type="CylinderShape" id=1]
height = 6.065
radius = 4.0

[node name="Ray" instance=ExtResource( 1 )]
max_movement_time = 6.0

[node name="RayAttacks" type="Node" parent="." index="0"]
script = ExtResource( 6 )

[node name="Model" parent="." index="1" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0893043, 0 )

[node name="ray" parent="Model/ray_rig/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="Label3D" parent="." index="3"]
text = ""

[node name="SentryButt" type="TextureButton" parent="PlayerUI" index="3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -141.0
margin_bottom = -77.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 15 )

[node name="BuildButt" type="TextureButton" parent="PlayerUI" index="4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -143.0
margin_right = 73.0
margin_bottom = -79.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 14 )

[node name="CancelButt" type="TextureButton" parent="PlayerUI" index="5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -142.0
margin_right = -55.0
margin_bottom = -78.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="SentryPlace" type="Area" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.144899, 5.46862 )
visible = false
collision_layer = 0
collision_mask = 31
monitorable = false
script = ExtResource( 9 )
blueprint_material = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="SentryPlace" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0436, 1.07054 )
shape = SubResource( 1 )

[node name="Blueprint" parent="SentryPlace" index="1" instance=ExtResource( 7 )]

[node name="sentry_base" parent="SentryPlace/Blueprint" index="0"]
material_override = ExtResource( 8 )

[node name="sentry_head" parent="SentryPlace/Blueprint" index="1"]
material_override = ExtResource( 8 )

[node name="PlaceSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 16 )
volume_db = -3.276

[editable path="Model"]
[editable path="SentryPlace/Blueprint"]
